--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,4 +1,74 @@
-.footer {
-    height: 100vh;
-    background-color: green;
+.Footer-main{
+    background-color: black;
+    color: white;
+    min-height: 25vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.Footer{
+    width: 70%;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.Footer a{
+    text-decoration: none;
+    margin: 0 2%;
+}
+
+.Footer-main p{
+    text-align: center;
+}
+
+.contact{
+    width: 50%;
+    min-width: 270px;
+    padding: 2%;
+}
+
+.contact h2{
+    text-align: center;
+    font-size: clamp(20px, 5vw + 1px, 40px);
+}
+
+.contact-apps{
+    display: flex;
+    justify-content: center;
+    padding: 2%;
+}
+
+.contact-apps img{
+    width: clamp(25px, 1.5vw + 1rem, 40px);
+    border-radius: 20%;
+    margin: 0 2%;
+}
+
+.work{
+    width: 50%;
+    min-width: 270px;
+    padding: 2%;
+}
+
+.work h2{
+    text-align: center;
+    font-size: clamp(20px, 5vw + 1px, 40px);
+}
+
+.work-apps{
+    display: flex;
+    justify-content: center;
+    padding: 2%;
+}
+
+.work-apps img{
+    width: clamp(25px, 1.5vw + 1rem, 40px);
+    border-radius: 20%;
+}
+
+.name{
+    color: red;
 }
