add resume and about section

--- a/src/styles/Skills.css
+++ b/src/styles/Skills.css
@@ -1,4 +1,4 @@
-.Skills_Container {
+/* .Skills_Container {
     width: 80%;
     margin: 0 auto;
     background-color: beige;
@@ -15,4 +15,4 @@
 .Skills li {
     list-style: none;
     font-size: 1.3em;
-}
+} */
