--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -2,3 +2,17 @@
     height: 100vh;
     background-color: blue;
 }
+
+.Projects_Container {
+    width: 80vw;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 3%;
+}
+
+.Project_Card {
+    width: 30%;
+    min-width: 330px;
+}
