--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,35 +1,62 @@
+:root {
+    --Home_Name: 55px;
+    --Home_Quote: 24px;
+    --Home_Para: 12px;
+    --Home_Button: 14px;
+}
+
 .Home {
     position: relative;
 }
 
 .Home_Main {
+    position: relative;
     height: 100vh;
-    background-image: url("../assets/Lamp.jpg");
+    /* background-image: url("../assets/Polygons.jpg"); */
+    /* background-image: linear-gradient(to right top, #3b3d3f, #2c3031, #202323, #141715, #040500); */
+    background-image: linear-gradient(to right top, #900505, #830030, #651447, #41234c, #24263f, #212233, #1d1d27, #19191b, #151416, #100f10, #090808, #000000);
     background-repeat: no-repeat;
     background-size: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    color: white;
+}
+
+.tint {
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: black;
+    opacity: 0.2;
+    position: absolute;
+    z-index: 1;
 }
 
 .Home_Container {
     /* background-color: red; */
+    margin-left: 1em;
+    position: relative;
+    z-index: 2;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .Home_Title {
-    font-size: 9em;
-    padding-left: 1.7em;
-    padding-top: .2em;
+    font-size: var(--Home_Name);
 }
 
 .Home_Quote {
-    font-size: 3em;
-    padding-left: 5.1em;
-    /* color: blue; */
+    font-size: var(--Home_Quote);
+    color: red;
 }
 
-.Down_Arrow {
+.Home_Para {
+    font-size: var(--Home_Para);
+    width: 70%;
+}
+
+.Scroll_Down {
     position: absolute;
     left: calc(50vw - 50px);
     top: calc(100vh - 70px);
@@ -39,6 +66,27 @@
     cursor: pointer;
 }
 
-.Down_Arrow img {
-    max-width: 35%;
+.button a {
+    text-decoration: none;
+    color: black;
+}
+
+.button {
+    cursor: pointer;
+    font-size: var(--Home_Button);
+    font-weight: 600;
+    padding: .5em 1.5em;
+    border-radius: 7px;
+    border-style: none;
+    margin-top: 1em;
+    margin-right: .7em;
+}
+
+@media (min-width: 1100px) {
+    :root {
+        --Home_Name: 140px;
+        --Home_Quote: 50px;
+        --Home_Para: 25px;
+        --Home_Button: 22px;
+    }
 }
