--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,9 +1,9 @@
 .Navbar_Main {
-    background-color: black;
+    background-color: rgb(19, 18, 18);
     position: fixed;
     width: 100%;
     top: 0;
-    z-index: 1;
+    z-index: 3;
     color: white;
 }
 
@@ -25,4 +25,17 @@
     font-family: sans-serif;
     font-weight: 600;
     cursor: pointer;
+}
+
+.NavList li:hover {
+    color: red;
+}
+
+#Home_About {
+    text-decoration: none;
+    color: white;
+}
+
+#Home_About:hover {
+    color: red;
 }
