--- a/src/styles/Skills.css
+++ b/src/styles/Skills.css
@@ -1,18 +1,65 @@
-/* .Skills_Container {
-    width: 80%;
-    margin: 0 auto;
-    background-color: beige;
+/* content */
+
+.content{
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: white;
+    background-color: rgb(27, 26, 26);
+    padding: 5em 0;
+}
+
+.FrontEnd{
+    background-color: black;
+}
+
+.Database{
+    background-color: black;
+}
+
+/* labels */
+
+.labels{
+    width: 80%;
+    display: flex;
+    justify-content: space-around;
+}
+
+.skills-label h3{
+    font-size: clamp(25px, 5vw + 1px, 40px);
+}
+
+/* display */
+
+.display{
+    width: 100%;
+}
+
+/* skills-main */
+
+.skills-main{
+    width: 100%;
+    margin: 0 auto;
+    padding: 2%;
+    display: flex;
+    flex-wrap: wrap;
     justify-content: center;
-    gap: 5em;
-    padding: 3em 0;
 }
 
-.Skills {
-    text-align: center;
+.skill{
+    width: 24%; 
+    margin: 2%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.Skills li {
-    list-style: none;
-    font-size: 1.3em;
-} */
+.skill img{
+    max-width: 40%;
+    border-radius: 10%;
+}
+
+.skill p{
+    font-size: clamp(8.5px, 1vw,20px);
+    padding: 2% 0%;
+}
