--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,5 +1,5 @@
 .Footer-main{
-    background-color: black;
+    background-color: rgb(27, 26, 26);
     color: white;
     min-height: 25vw;
     display: flex;
