--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,9 @@
     padding: 0;
     margin: 0;
 }
+
+body {
+    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+    font-synthesis: none;
+    text-rendering: optimizeLegibility;
+}
