--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -82,6 +82,15 @@
     margin-right: .7em;
 }
 
+@media (min-width: 700px) {
+    :root {
+    --Home_Name: 80px;
+    --Home_Quote: 35px;
+    --Home_Para: 19px;
+    --Home_Button: 17px;
+    }
+}
+
 @media (min-width: 1100px) {
     :root {
         --Home_Name: 140px;
