--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -1,7 +1,22 @@
 :root {
+    --Projects_Main_Title: 40px;
     --Project_Title: 30px;
-    --Project_Description : 20px;
-    --Project_Button: 16px;
+    --Project_Description : 18px;
+    --Project_Button: 15px;
+}
+
+.projects {
+    /* background-color: rgb(92, 90, 90); */
+    /* background-color: rgb(27, 26, 26); */
+    background-color: black;
+    padding: 4.5em 0;
+}
+
+.Projects_Main_Title {
+    font-size: var(--Projects_Main_Title);
+    margin-bottom: .5em;
+    color: white;
+    text-align: center;
 }
 
 .Projects_Container {
@@ -10,15 +25,17 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    column-gap: 3%;
+    column-gap: 2em;
     row-gap: 20px;
 }
 
 .Project_Card {
     min-width: 330px;
-    width: 30%;
-    max-width: 450px;
-    background-color: beige;
+    width: 70vw;
+    background-color: rgb(45, 44, 44);
+    /* background-image: linear-gradient(to bottom, #000000, #060606, #0c0c0c, #111111, #151515, #151515, #151515, #151515, #111111, #0c0c0c, #060606, #000000); */
+    color: white;
+    text-align: center;
     border-radius: 20px;
     padding: 1em 1em;
 }
@@ -32,6 +49,7 @@
 .Project_Description {
     font-size: var(--Project_Description);
     margin-bottom: 1em;
+    line-height: 1.5;
 }
 
 .Project_Buttons {
@@ -42,5 +60,21 @@
 
 .Project_Buttons button {
     font-size: var(--Project_Button);
-    padding: .5em .7em;
+    font-weight: 700;
+    padding: .7em 1em;
+    border-radius: 6px;
+    border-style: none;
+    background-color: black;
+    color: white;
+    cursor: pointer;
+}
+
+.Project_Buttons button:hover {
+    color: red;
+}
+
+@media (min-width:890px) {
+    .Project_Card {
+        width: 350px;
+    }
 }
