--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -6,8 +6,6 @@
 }
 
 .projects {
-    /* background-color: rgb(92, 90, 90); */
-    /* background-color: rgb(27, 26, 26); */
     background-color: black;
     padding: 4.5em 0;
 }
@@ -33,7 +31,6 @@
     min-width: 330px;
     width: 70vw;
     background-color: rgb(45, 44, 44);
-    /* background-image: linear-gradient(to bottom, #000000, #060606, #0c0c0c, #111111, #151515, #151515, #151515, #151515, #111111, #0c0c0c, #060606, #000000); */
     color: white;
     text-align: center;
     border-radius: 20px;
@@ -71,6 +68,8 @@
 
 .Project_Buttons button:hover {
     color: red;
+    transform: translateY(3px);
+    transition: transform .3s ease;
 }
 
 @media (min-width:890px) {
